force-app/main/default/objects/Product__c/fields/Variants__c.field-meta.xml
<CustomField>
    <fullName>Variants__c</fullName>
    <label>Variants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vanaspati ghee</fullName>
            </value>
            <value>
                <fullName>Olein</fullName>
            </value>
            <value>
                <fullName>Soyabean</fullName>
            </value>
            <value>
                <fullName>Mustard</fullName>
            </value>
            <value>
                <fullName>Cotton Seed</fullName>
            </value>
            <value>
                <fullName>Palm</fullName>
            </value>
            <value>
                <fullName>Sunflower</fullName>
            </value>
            <value>
                <fullName>Kachchighani</fullName>
            </value>
            <value>
                <fullName>Pakkighani</fullName>
            </value>
            <value>
                <fullName>Steamed</fullName>
            </value>
            <value>
                <fullName>Par -Boiled</fullName>
            </value>
            <value>
                <fullName>White Rice</fullName>
            </value>
            <value>
                <fullName>Tomato</fullName>
            </value>
            <value>
                <fullName>Bottle Gaurd</fullName>
            </value>
            <value>
                <fullName>Lady Finger</fullName>
            </value>
            <value>
                <fullName>Brinjal</fullName>
            </value>
            <value>
                <fullName>Grapes</fullName>
            </value>
            <value>
                <fullName>Gauvava</fullName>
            </value>
            <value>
                <fullName>Culli Flower</fullName>
            </value>
            <value>
                <fullName>Cabage</fullName>
            </value>
            <value>
                <fullName>Watermelon</fullName>
            </value>
            <value>
                <fullName>Green Peas</fullName>
            </value>
            <value>
                <fullName>CAPSICUM</fullName>
            </value>
            <value>
                <fullName>Bitter Gourd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>