force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Image_url__c</columns>
    <columns>Price__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Variants__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Image__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>